[gd_scene load_steps=2 format=3 uid="uid://e0hvhpdu6hbn"]

[ext_resource type="Script" uid="uid://b365074iebc74" path="res://Scripts/Menus/menu_principal.gd" id="1_ntrab"]

[node name="MenuPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ntrab")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(3.60981e-06, 0.639244, 0.320975, 1)

[node name="LabelTitulo" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 80
text = "Desmanguezados"

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -50.5
offset_right = 24.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 50

[node name="ButtonJogar" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Jogar"

[node name="ButtonConfig" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Configurações"

[node name="ButtonSair" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Sair"

[connection signal="pressed" from="GridContainer/ButtonJogar" to="." method="_on_button_jogar_pressed"]
[connection signal="pressed" from="GridContainer/ButtonConfig" to="." method="_on_button_config_pressed"]
[connection signal="pressed" from="GridContainer/ButtonSair" to="." method="_on_button_sair_pressed"]
